# qaldav-popup-calendar

./: CMakeLists.txt  MonthGridDelegate.qml  README.md  eventmodel.cpp  eventmodel.h  main.cpp  main.qml  qaldav-calendar.conf.example
CalDAVCalendar/: CalendarClient.cpp  CalendarClient.h  CalendarClient_CalDAV.cpp  CalendarClient_CalDAV.h  CalendarClient_CalDAV_ReceiveResonse.cpp  CalendarClient_CalDAV_SendRequest.cpp  CalendarClient_CalDAV_StateMachine.cpp  CalendarEvent.cpp  CalendarEvent.h  DateUtils.cpp
